[gd_scene load_steps=5 format=3 uid="uid://d4ew8u24p4yvq"]

[ext_resource type="Script" path="res://map/map_node.gd" id="1_t8nfy"]
[ext_resource type="Texture2D" uid="uid://ddxnmuruhy7rb" path="res://map/horde.png" id="2_bm056"]
[ext_resource type="Texture2D" uid="uid://dq53eedv83p3c" path="res://map/cleared.png" id="3_0l38t"]

[sub_resource type="CircleShape2D" id="CircleShape2D_222ma"]
radius = 22.2036

[node name="Map Node" type="Node2D"]
script = ExtResource("1_t8nfy")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_bm056")

[node name="ClearedMarker" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_0l38t")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_222ma")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
